@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ---------- -----------  --------------------------------------------------------
+2002-12-02 nonchocoboy  Specialization of XMLAttribute::getValue<T> for
+                        std::string added so that more than the first word of
+                        the attribute string can be retrieved.
 2002-12-02 nonchocoboy  Added versioning information.
                         NEW VERSION: 0.0.1
 2002-05-06 subatomic    Added README and build instructions
